<resources>
    <string name="app_name" translatable="false">PubCrawl 2.0</string>
    <string name="action_settings">Settings</string>
    <string name="home_fragment_title">Home</string>
    <string name="chat_fragment_title">Chat</string>
    <string name="profile_fragment_title">Profile</string>
    <string name="new_event_toolbar_title">New PubCrawl</string>


    <!--Create new event strings-->
    <string name="event_title">Event title</string>
    <string name="event_public">public event</string>
    <string name="event_description">Event description</string>
    <string name="event_tracked">tracked</string>
    <string name="settings">Settings</string>
    <string name="scan_qr">Scan QR</string>
    <string name="new_event">New event</string>
    <string name="search">Search</string>
    <string name="invite_dialog_title">Share this Event with your friends</string>
    <string name="pubs_details_title"> Pub Details: </string>

    <!---->
    <string name="lorem">Lorem ipsum dolor sit amet, consectetur adipiscing elit.
        Proin vitae consectetur nulla. Donec eu lacus vehicula, ultrices metus a, iaculis dui.
        Donec posuere tempus consectetur. Mauris sapien justo, vehicula et purus a, auctor
        pharetra nisi. Duis quam diam, sollicitudin convallis egestas vel, laoreet eget elit.
        Sed dignissim laoreet risus quis ultrices. Ut non libero commodo mi tincidunt maximus.\n\n
        Phasellus pharetra, purus ut aliquam sodales, enim ante ullamcorper mi, quis maximus
        dui orci quis sem. Aenean sodales leo vitae urna lacinia, nec euismod diam viverra. \nUt
        venenatis, purus ultricies hendrerit commodo, arcu lorem faucibus elit, eget vulputate
        mi erat non neque. Curabitur tincidunt dictum enim in pellentesque.</string>

    <string name="description">Description</string>
    <string name="info">Info</string>
    <string name="route">Route</string>
    <string name="participants">Participants</string>
    <string name="owner">Owner</string>
    <string name="tracked">Tracked</string>
    <string name="unknown">Unknown</string>
    <string name="id">Id</string>


    <!-- Preferences titles -->
    <string name="pref_profile_title">Profile</string>
    <string name="pref_settings_title">Application settings</string>
    <string name="pref_notifications">Notifications</string>
    <string name="title_activity_settings">Settings</string>

    <!-- Strings related to Settings -->

    <!-- Example General settings -->
    <string name="pref_header_general">General</string>

    <string name="pref_title_social_recommendations">Enable social recommendations</string>
    <string name="pref_description_social_recommendations">Recommendations for people to contact
        based on your message history
    </string>

    <string name="pref_title_display_name">Display name</string>
    <string name="pref_default_display_name">John Smith</string>

    <string name="pref_title_add_friends_to_messages">Add friends to messages</string>
    <string-array name="pref_example_list_titles">
        <item>Always</item>
        <item>When possible</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_example_list_values">
        <item>1</item>
        <item>0</item>
        <item>-1</item>
    </string-array>

    <!-- Preferences Camera -->
    <string name="pref_header_camera">Camera</string>

    <string name="pref_title_flash">Use flash</string>

    <string name="pref_title_auto_focus">Auto focus</string>

    <!-- Example settings for Data & Sync -->
    <string name="pref_header_data_sync">Data &amp; sync</string>

    <string name="pref_title_sync_frequency">Sync frequency</string>
    <string-array name="pref_sync_frequency_titles">
        <item>5 minutes</item>
        <item>15 minutes</item>
        <item>30 minutes</item>
        <item>1 hour</item>
        <item>3 hours</item>
        <item>6 hours</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_sync_frequency_values">
        <item>5</item>
        <item>15</item>
        <item>30</item>
        <item>60</item>
        <item>180</item>
        <item>360</item>
        <item>-1</item>
    </string-array>

    <string-array name="list_preference_entries">
        <item>Entry 1</item>
        <item>Entry 2</item>
        <item>Entry 3</item>
    </string-array>

    <string-array name="list_preference_entry_values">
        <item>1</item>
        <item>2</item>
        <item>3</item>
    </string-array>

    <string-array name="multi_select_list_preference_default_value" />

    <string name="pref_title_system_sync_settings">System sync settings</string>

    <!-- Example settings for Notifications -->
    <string name="pref_header_notifications">Notifications</string>

    <string name="pref_title_new_message_notifications">New message notifications</string>

    <string name="pref_title_ringtone">Ringtone</string>
    <string name="pref_ringtone_silent">Silent</string>

    <string name="pref_title_vibrate">Vibrate</string>

    <string name="details">Details</string>
    <string name="route_map">ROUTE MAP</string>
    <string name="no_description">No description</string>
    <string name="starts">Starts</string>
    <string name="show_all">Show all</string>
    <string name="address">Address</string>
    <string name="coordinates">Coordinates</string>
    <string name="size">Size</string>
    <string name="prices">Prices</string>
    <string name="rating">Rating</string>
    <string name="opening_times">Opening times</string>
    <string name="no_data">No data</string>
    <string name="top_participants">Top participants</string>
    <string name="past_events">Past events</string>
    <string name="future_events">Future events</string>
    <string name="friends">Friends</string>
    <string name="joined_events">Joined events</string>
    <string name="favourite_pubs">Favourite pubs</string>
    <string name="owned_pubs">Owned pubs</string>
    <string name="events_created">Events created</string>
    <string name="sync_now">Sync now</string>
    <string name="App_Exit">Press again to exit</string>
    <string name="server_client_id">649804390923-7mov7q7g42kbod1do8ikvhtgdu0m58ai.apps.googleusercontent.com</string>
    <string name="join">Join</string>
    <string name="leave">Leave</string>
    <string name="alert_join_event_title">Join event?</string>
    <string name="alert_join_event_message">Are you sure you want to join this event?</string>
    <string name="alert_leave_event_title">Leave event?</string>
    <string name="alert_leave_event_message">Are you sure you want to leave this event?</string>
    <string name="add">ADD</string>
    <string name="remove">REMOVE</string>
    <string name="alert_add_friend_title">Add friend?</string>
    <string name="alert_add_friend_message">Do you want to add this person as your friend?</string>
    <string name="alert_remove_friend_title">Remove friend?</string>
    <string name="alert_remove_friend_message">Are you sure you want to remove this friend?</string>
    <string name="favourite">FAVOURITE</string>
    <string name="no_joined_events">You havent joined any events yet...</string>
    <string name="find_events">Find events</string>
    <string name="refresh">Refresh</string>
    <string name="my_profile">My profile</string>
    <string name="error_creating_acc">Error creating account!</string>
    <string name="login_failed">Login failed, please try again later</string>
    <string name="alert_logout_text">Do you really want to log out</string>
    <string name="search_event">Search Event</string>
</resources>
