<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/pub_details.menu.add"
        android:icon="@drawable/ic_favorite_border_black_24dp"
        android:visible="true"
        app:showAsAction="always"
        android:title="@string/favourite"/>

    <item
        android:id="@+id/pub_details.menu.remove"
        android:icon="@drawable/ic_favorite_black_24dp"
        android:visible="false"
        app:showAsAction="always"
        android:title="@string/remove"/>

    <item
        android:id="@+id/pub_details.menu.refresh"
        android:icon="@drawable/ic_sync_24dp"
        android:visible="true"
        app:showAsAction="ifRoom"
        android:title="@string/refresh"/>
</menu>