<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/person_details.menu.add"
        android:icon="@drawable/ic_person_add_black_24dp"
        android:visible="true"
        app:showAsAction="always"
        android:title="@string/add"/>

    <item
        android:id="@+id/person_details.menu.remove"
        android:icon="@drawable/ic_person_friends_black_24dp"
        android:visible="false"
        app:showAsAction="always"
        android:title="@string/remove"/>

    <item
        android:id="@+id/person_details.menu.refresh"
        android:icon="@drawable/ic_sync_black_24dp"
        android:visible="true"
        app:showAsAction="ifRoom"
        android:title="@string/refresh"/>
</menu>