<preference-headers xmlns:android="http://schemas.android.com/apk/res/android">

    <!-- These settings headers are only used on tablets. -->
    <!--
        <header
            android:fragment="com.ws1617.iosl.pubcrawl20.SettingsActivity$GeneralPreferenceFragment"
            android:icon="@drawable/ic_info_black_24dp"
            android:title="@string/pref_header_general" />
            -->
    <header
        android:id="@+id/pref_header_my_profile"
        android:icon="@drawable/ic_person_black_24dp"
        android:title="@string/my_profile"
        />

    <header
        android:fragment="com.ws1617.iosl.pubcrawl20.SettingsActivity$NotificationPreferenceFragment"
        android:icon="@drawable/ic_notifications_black_24dp"
        android:title="@string/pref_header_notifications" />

    <header
        android:fragment="com.ws1617.iosl.pubcrawl20.SettingsActivity$DataSyncPreferenceFragment"
        android:icon="@drawable/ic_sync_black_24dp"
        android:title="@string/pref_header_data_sync" />

    <header
        android:fragment="com.ws1617.iosl.pubcrawl20.SettingsActivity$CameraPreferenceFragment"
        android:icon="@drawable/ic_camera_alt_black_24dp"
        android:title="@string/pref_header_camera"/>

    <header
        android:fragment="com.ws1617.iosl.pubcrawl20.SettingsActivity$DevelopmentFragment"
        android:icon="@drawable/ic_code_black_24dp"
        android:title="Development" />

</preference-headers>
