<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">
    <PreferenceCategory
        android:title="@string/pref_profile_title"
        android:key="pref_key_profile_title">
        <Preference
            android:title="TODO: custom pref: profile pic"
            android:key="pref_key_user_picture" />
        <Preference
            android:title="TODO: username"
            android:key="pref_key_username" />

    </PreferenceCategory>

    <PreferenceCategory
        android:title="@string/pref_settings_title"
        android:key="pref_key_settings">

        <CheckBoxPreference
            android:title="@string/pref_notifications"
            android:key="pref_key_notifications" />


    </PreferenceCategory>

    <Preference
        android:title="TODO more settings and stuff" />

</PreferenceScreen>